--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "nvchad"]
-	path = nvchad
-	url = https://github.com/eugek0/nvchad.git
+[submodule "nvim"]
+	path = nvim
+	url = https://github.com/eugek0/lazy.nvim.git
