--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -2,6 +2,10 @@ unbind C-b
 set -g prefix C-a
 bind C-a send-prefix
 
+set -g default-terminal "tmux-256color"
+set -g terminal-overrides ",*:Tc"
+set -ga terminal-overrides '*:Ss=\E[%p1%d q:Se=\E[ q'
+
 bind -n M-1 select-window -t 0
 bind -n M-2 select-window -t 1
 bind -n M-3 select-window -t 2
