Убрана проверка типов для питона

--- a/python/pyrightconfig.json
+++ b/python/pyrightconfig.json
@@ -1,6 +1,6 @@
 {
   "pythonVersion": "3.10.17",
-  "typeCheckingMode": "basic",
+  "typeCheckingMode": "off",
   "venvPath": "/home/eugene/.pyenv/versions/",
   "venv": "webmis"
 }
